--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -16,6 +16,7 @@
 	font-family: scp;
 	font-size: 16px;
 	color: white;
+	-webkit-user-drag: none;
 /*	outline: 1px solid blue;*/
 }
 body {
@@ -59,22 +60,27 @@ header {
 }
 .content:hover {
 	text-decoration: underline;
+	color: var(--hover-color);
+}
+.content:active {
+	color: yellow;
 }
 
 
 
 
 
-/*.slider {
+.slider {
 	background: rgba(38, 38, 38, .80);
 	width: 100%;
+	height: 3rem;
 	display: flex;
 	align-items: center;
 	justify-content: center;
 	position: fixed;
 	z-index: 1;
 	bottom: 0;
-	gap: 5px;
+	gap: 1rem;
 }
 .left,
 .right {
@@ -88,7 +94,7 @@ header {
 	filter: brightness(1);
 }
 .left {
-	content: url(../media/icon/left.png);
+	content: url(../media/image/left.png);
 }
 .left:hover {
 	animation: left 1s infinite;
@@ -105,7 +111,7 @@ header {
 	}
 }
 .right {
-	content: url(../media/icon/right.png);
+	content: url(../media/image/right.png);
 }
 .right:hover {
 	animation: right 1s infinite;
@@ -126,15 +132,45 @@ header {
 	filter: grayscale(100%);
 	animation: none;
 }
-.numberInput {
-	background-color: black;
-	width: 2rem;
+.selectBox {
+	align-items: center;
+	cursor: pointer;
+}
+.select {
+	background-color: var(--bg-main);
+	width: 10rem;
 	border: var(--border);
-	outline: none;
+	padding: .2rem;
 	font-size: 1rem;
 }
+.optionBox {
+	background-color: #262626;
+	width: 10rem;
+	height: 9.5rem;
+	border: var(--border);
+	position: absolute;
+	bottom: 3rem;
+	overflow-y: auto;
+}
+.optionBoxHide {
+	display: none;
+}
+.option {
+	outline: var(--border);
+	padding: .2rem;
+}
+.option:hover {
+	background-color: var(--hover-color);
+}
+.option:active {
+	color: yellow;
+}
+.optionSelected {
+	background-color: gray;
+}
 
-*/
+
+
 
 
 h1,
@@ -149,6 +185,7 @@ h2 {
 h3 {
 	font-size: 1.4rem;
 }
+.selectBox,
 .list,
 .story,
 .dialogue,
@@ -159,7 +196,7 @@ h3 {
 .list,
 .story {
 	width: 52rem;
-	margin: 1rem auto 15rem auto;
+	margin: 1rem auto 4rem auto;
 	gap: 1rem;
 }
 .dialogue {
@@ -169,7 +206,8 @@ h3 {
 	padding: .5rem;
 	gap: 1rem;
 }
-.dialogue:hover {
+.dialogue:hover,
+select:hover {
 	outline: 1px solid white;
 }
 .list .dialogue {
