--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -288,8 +288,8 @@ p {
 	border-left-color: white;
 }
 .Shuuya,
-.father,
-.mother {
+.ShuuyaFather,
+.ShuuyaMother {
 	border-left-color: royalblue;
 }
 .Kowashi {
