--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -64,11 +64,15 @@ header {
 	text-decoration: none;
 	cursor: pointer;
 }
-.button:hover {
+.button:hover,
+.note span:hover,
+li span:hover {
 	text-decoration: underline;
 	color: var(--hover-color);
 }
-.button:active {
+.button:active,
+.note span:active,
+li span:active {
 	color: yellow;
 }
 
@@ -339,6 +343,66 @@ p {
 	font-size: 3rem;
 	color: grey;
 	cursor: pointer;
+}
+
+
+
+.dropdown {
+	cursor: pointer;
+}
+.dropdown::before {
+	content: '▽ ';
+	color: red;
+}
+.dropdownActive::before {
+	content: '△ ';
+	color: lime;
+}
+.dropdownHide {
+	display: none;
+	margin-left: .5rem;
+}
+.dropdownShow {
+	display: block;
+}
+.headerSmall {
+	width: fit-content;
+	padding-bottom: .3rem;
+	margin-bottom: .5rem;
+	border-bottom: .05rem solid white;
+}
+.group {
+	margin: 1rem 0;
+	display: flex;
+}
+.point,
+.group li,
+.note {
+	margin: 0 0 .3rem .5rem;
+}
+h5 {
+	min-width: 30%;
+	max-width: 30%;
+	text-align: left;
+}
+.point::before {
+	content: '<-';
+	margin-right: .3rem;
+}
+.note {
+	border-left: .3rem solid yellow;
+	padding-left: 1rem;
+}
+.note span,
+li span {
+	color: aqua;
+	cursor: pointer;
+}
+.now::after {
+	content: ' (Hiện tại)';
+	font-size: .7rem;
+	color: yellow;
+	vertical-align: text-top;
 }
 
 
