--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -51,12 +51,20 @@ header {
 .buttonHeader {
 	gap: 2rem;
 }
-.symbol {
-	content: url(../media/image/symbol.png);
+.dainisekaiSymbol,
+.logHorizonSymbol {
+	margin: .3rem 0;
+	cursor: pointer;
+}
+.dainisekaiSymbol {
+	content: url(../media/image/dainisekai_sympol.png);
+	width: 4rem;
+	height: 4rem;
+}
+.logHorizonSymbol {
+	content: url(../media/image/log_horizon_symbol.png);
 	width: 6rem;
 	height: 3rem;
-	margin: .3rem 0 .3rem 0;
-	cursor: pointer;
 }
 .title,
 .button {
