--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -31,11 +31,10 @@ body {
 	width: 10px;
 }
 ::-webkit-scrollbar-thumb {
-	background-color: var(--bg);
-	border: var(--border);
+	background-color: #525252;
 }
 ::-webkit-scrollbar-thumb:hover {
-	border: 2px solid var(--hover-color);
+	background-color: var(--hover-color);
 }
 header,
 .inHeader,
