--- a/assets/css/phone.css
+++ b/assets/css/phone.css
@@ -25,12 +25,10 @@
 		font-size: 1rem;
 	}
 
-	h1,
-	h2 {
+	h1 {
 		font-size: 1.5rem;
 	}
-	h3,
-	h4 {
+	h2 {
 		font-size: 1.2rem;
 	}
 
@@ -47,5 +45,12 @@
 
 	.sekaiDex {
 		flex-direction: column;
+	}
+
+	.dropdownShow {
+		display: block;
+	}
+	.group {
+		width: 100%;
 	}
 }
